# floppy-hue

./: .gitignore  README.md  pyproject.toml
src/floppy_hue/: cli.py  core.py
src/floppy_hue/data/: themes.toml
