[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "floppy-hue"
version = "0.2.1"
description = "A CLI tool to match images against standard color palettes."
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pillow",
    "scikit-image",
    "scikit-learn",
    "tomli; python_version < '3.11'",
    "matplotlib",
]

[project.scripts]
floppy-hue = "floppy_hue.cli:main"

[tool.setuptools.package-data]
"floppy_hue.data" = ["*.toml"]
